Pre wrap fix

--- a/public/static/css/main/style.css
+++ b/public/static/css/main/style.css
@@ -3089,4 +3089,5 @@ a.special_link:hover
 pre
 {
 	margin: 0;
+	white-space: pre-wrap;
 }
